src/test/ui/chalkify/recursive_where_clause_on_type.stderr
error: the type `S` is not well-formed (chalk)
  --> $DIR/recursive_where_clause_on_type.rs:26:5
   |
LL |     foo::<S>()
   |     ^^^^^^^^

error: the type `S` is not well-formed (chalk)
  --> $DIR/recursive_where_clause_on_type.rs:26:11
   |
LL |     foo::<S>()
   |           ^

error: aborting due to 2 previous errors

